--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </head>
@@ -21,7 +21,8 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="#">Home</a>
                     <a class="nav-link" href="#promo">Promos</a>
-                    <a class="nav-link" href="#product_start">Products</a>
+                    <a class="nav-link" href="#product_start">Categories</a>
+                    <a class="nav-link" href="products.html">Products</a>
                     <a class="nav-link" href="#faq_start">FAQ</a>
                 </div>
             </div>
@@ -46,8 +47,8 @@
     <div id="promo" class="promotion_section">
         <img id="sale_GPU" src="img/GPU.png" alt="GPU">
         <img id="sale_CPU" src="img/CPU.png" alt="CPU">
-        <img id="sale_RAM" src="img/RAM.png" alt="RAM">
-        <img id="sale_FAN" src="img/FAN.webp" alt="CPU Fan">
+        <img id="sale_RAM" src="img/ram_1.png" alt="RAM">
+        <img id="sale_FAN" src="img/fan_1.webp" alt="CPU Fan">
         <div class="promotion_section_content">
             <p>John's PCs</p>
             <h2>OPENING SALE!</h2>
@@ -61,51 +62,51 @@
         <h2 id="product_start">Product Categories</h2>
         <div class="category_grid">
             <a href="products.html">
-                <div class="item">
+                <div id="item_1" class="item">
                     <img src="img/cpu_category.png" alt="">
                     <p>CPU</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_2" class="item">
                     <img src="img/gpu_category.png" alt="">
                     <p>Graphics Card</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_3" class="item">
                     <img src="img/ram_category.png" alt="">
                     <p>RAM</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_4" class="item">
                     <img src="img/psu_category.png" alt="">
                     <p>Power Supply</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_5" class="item">
                     <img src="img/nvme_category.png" alt="">
                     <p>Storage</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_6" class="item">
                     <img src="img/motherboard_category.png" alt="">
                     <p>Motherboard</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_7" class="item">
                     <img src="img/cooler_category.png" alt="">
                     <p>Cooling</p>
                 </div>
             </a>
             <a href="products.html">
-                <div class="item">
+                <div id="item_8" class="item">
                     <img src="img/others_category.png" alt="">
-                    <p>More...</p>
+                    <p>All Categories</p>
                 </div>
             </a>
         </div>
