--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>OPENING SALE!</h2>
             <p>Shop and Order now!</p>
             <p>ALL PRICES UP TO 45% OFF</p>
-            <button>EXPLORE SHOP</button>
+            <a href="products.html"><button>EXPLORE SHOP</button></a>
         </div>
     </div>
 
